--- a/package.json
+++ b/package.json
@@ -6,9 +6,36 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "sanity:schema": "sanity schema extract --env-file=.env",
+    "sanity:types": "sanity typegen generate"
   },
   "dependencies": {
-    "astro": "^5.1.7"
+    "@astrojs/react": "^4.1.5",
+    "@astrojs/tailwind": "^5.1.4",
+    "@fontsource/merriweather": "^5.1.1",
+    "@fontsource/source-sans-pro": "^5.1.0",
+    "@iconify-json/lucide": "^1.2.24",
+    "@iconify/react": "^5.2.0",
+    "@nanostores/react": "^0.8.4",
+    "@sanity/astro": "^3.1.9",
+    "@sanity/client": "^6.24.3",
+    "@sanity/ui": "^2.11.2",
+    "@sanity/visual-editing": "^2.12.2",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "astro": "^5.1.7",
+    "astro-icon": "^1.1.5",
+    "fuse.js": "^7.0.0",
+    "groq": "^3.70.0",
+    "nanostores": "^0.11.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sanity": "^3.70.0",
+    "tailwindcss": "^3.4.17",
+    "valibot": "^1.0.0-beta.12",
+    "virtua": "^0.39.3",
+    "vite": "^6.0.7",
+    "zod": "^3.24.1"
   }
 }
