--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
+  "include": ["src", ".astro/types.d.ts", "**/*", "./sanity.types.ts"],
+  "exclude": ["dist"],
+  "compilerOptions": {
+    "types": ["@sanity/astro/module"],
+    "paths": {
+      "sanity:types": ["./sanity.types"]
+    }
+  }
 }
