--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@iconify-json/lucide": "^1.2.24",
     "@iconify/react": "^5.2.0",
     "@nanostores/react": "^0.8.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@sanity/astro": "^3.1.9",
     "@sanity/client": "^6.24.3",
     "@sanity/ui": "^2.11.2",
